@@ -458,6 +458,14 @@ only usable with COB_USE_VC2013_OR_GREATER */
 #endif
 #endif
 
+/*
+ * Define likely and unlikely as no-ops everywhere, for testing. 
+ * Remove after removing them from the code. 
+ */
+#define likely(x)	(x)
+#define unlikely(x)	(x)
+
+
 #if	defined(__GNUC__)
 #define	optim_memcpy(x,y,z)	__builtin_memcpy (x, y, z)
 #else
@@ -465,8 +473,6 @@ only usable with COB_USE_VC2013_OR_GREATER */
 #endif
 
 #if	defined(__GNUC__) && (__GNUC__ >= 3)
-#define likely(x)	__builtin_expect((long int)!!(x), 1L)
-#define unlikely(x)	__builtin_expect((long int)!!(x), 0L)
 #define	COB_A_MALLOC	__attribute__((malloc))
 #define	COB_HAVE_STEXPR	1
 
@@ -486,13 +492,6 @@ only usable with COB_USE_VC2013_OR_GREATER */
 
 #elif	defined(__xlc__) && __IBMC__ >= 700
 
-#if	__IBMC__ >= 900
-#define likely(x)	__builtin_expect((long int)!!(x), 1L)
-#define unlikely(x)	__builtin_expect((long int)!!(x), 0L)
-#else
-#define likely(x)	(x)
-#define unlikely(x)	(x)
-#endif
 #define	COB_NOINLINE	__attribute__((noinline))
 #define	COB_A_INLINE	__attribute__((always_inline))
 #define	COB_A_MALLOC
@@ -505,8 +504,6 @@ only usable with COB_USE_VC2013_OR_GREATER */
 
 #elif	defined(__SUNPRO_C) && __SUNPRO_C >= 0x590
 
-#define likely(x)	(x)
-#define unlikely(x)	(x)
 #define	COB_A_MALLOC	__attribute__((malloc))
 #define	COB_NOINLINE	__attribute__((noinline))
 #define	COB_A_INLINE	__attribute__((always_inline))
@@ -515,8 +512,6 @@ only usable with COB_USE_VC2013_OR_GREATER */
 
 #elif	defined(_MSC_VER)
 
-#define likely(x)	(x)
-#define unlikely(x)	(x)
 #define	COB_A_MALLOC
 #define	COB_NOINLINE	__declspec(noinline)
 #define	COB_A_INLINE	__forceinline
@@ -525,8 +520,6 @@ only usable with COB_USE_VC2013_OR_GREATER */
 
 #else
 
-#define likely(x)	(x)
-#define unlikely(x)	(x)
 #define	COB_A_MALLOC
 #define	COB_NOINLINE
 #define	COB_A_INLINE
