@@ -1,3 +1,6 @@
+2020-12-14  James K. Lowden  <jklowden@symas.com>
+
+	* common.h (likely, unlikely): never use __builtin_expect
 
 2020-12-09  Ron Norman <rjn@inglenet.com>
 
